# Machine-Learning-In-C

./: .gitignore  README.md
core/app/: CMakeLists.txt  build.bat  clean-build.bat
core/app/images/digits/: empty.ds  grayscale.ds  test.ds
core/app/include/app/: app.h  dataset.h  drawpanel.h  visualizer.h  visutil.h
core/app/src/: app.c  dataset.c  drawpanel.c  visualizer.c  visutil.c
core/model/: CMakeLists.txt  clean-configure-and-install.bat  configure-and-install.bat
core/model/include/model/: model.h  visualizer.h
core/model/src/: layer.c  model.c  visualizer.c
core/util/: CMakeLists.txt
core/util/include/util/: debug_memory.h  math.h  matrix.h  profiler.h  vector.h
core/util/src/: math.c  matrix.c  profiler.c  vector.c
docs/: Doxyfile
tests/: CMakeLists.txt  build.bat
tests/include/tests/: matrix_test.h
tests/util/: matrix_test.cpp
